@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Display Tiff as Jpeg in browsers without Tiff support (#1488452)
 - Don't display Pdf/Tiff/Flash attachments inline without browser support (#1488452, #1487929)
 - Fix html2text conversion of strong|b|a|th|h tags when used in upper case
 - Add listcontrols template container in Larry skin (#1488498)
